--- a/templates/impressora.html
+++ b/templates/impressora.html
@@ -1,7 +1,7 @@
 {% comment %}
     Desenvolvido para o Projeto Final de Engenharia
     Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
-    Data: 23 de Deembro de 2020
+    Data: 23 de Dezembro de 2020
 {% endcomment %}
 
 {% load static %}
