--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -14,6 +14,9 @@
 
   {% include "tabelas_includes.html" %}
 
+  {% comment %} Para recarregar a página em caso de um botão back ou similar {% endcomment %}
+  {% include "reload.html" %}
+
 {% endblock %}
 
 {% block content %}
