--- a/templates/generic.html
+++ b/templates/generic.html
@@ -21,7 +21,7 @@
     {% endif %}
 
     {% if agendar_dinamica %}
-        <a href="{% url 'dinamicas_criar' %}">Agendar outra dinâmica</a><br>
+        <a href="{% url 'dinamicas_criar' %}">Agendar outra mentoria/dinâmica</a><br>
     {% endif %}
 
 
