--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -11,6 +11,7 @@
   {% load dictionary %}
 
   <script src="{% static 'js/Chart.min.js' %}"></script>
+  <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
 
   {% include "tabelas_includes.html" %}
 
