--- a/administracao/templates/administracao/cadastra_usuario.html
+++ b/administracao/templates/administracao/cadastra_usuario.html
@@ -77,14 +77,14 @@
       <label for="matricula">Matrícula: </label> <input type="text" size="8" maxlength="8" id="matricula" name="matricula" {% if usuario and usuario.aluno and usuario.aluno.matricula %}value="{{usuario.aluno.matricula}}"{% endif %}><br>
  
       Curso: 
-      <input type="radio" name="curso" id="computacao" value="computacao" {% if usuario.aluno.curso == 'C' %}checked{% endif %} required> <label for="computacao"> Computação</label>&nbsp;&nbsp;&nbsp;
-      <input type="radio" name="curso" id="mecanica" value="mecanica" {% if usuario.aluno.curso == 'M' %}checked{% endif %} required> <label for="mecanica"> Mecânica</label>&nbsp;&nbsp;&nbsp;
-      <input type="radio" name="curso" id="mecatronica" value="mecatronica" {% if usuario.aluno.curso == 'X' %}checked{% endif %} required> <label for="mecatronica"> Mecatrônica</label>
+      <input type="radio" name="curso" id="computacao" value="computacao" {% if usuario.aluno.curso == 'C' %}checked{% endif %}> <label for="computacao"> Computação</label>&nbsp;&nbsp;&nbsp;
+      <input type="radio" name="curso" id="mecanica" value="mecanica" {% if usuario.aluno.curso == 'M' %}checked{% endif %}> <label for="mecanica"> Mecânica</label>&nbsp;&nbsp;&nbsp;
+      <input type="radio" name="curso" id="mecatronica" value="mecatronica" {% if usuario.aluno.curso == 'X' %}checked{% endif %}> <label for="mecatronica"> Mecatrônica</label>
       <br>
       <label for="ano">Ano PFE: </label> 
-      <input type="number" id="ano" name="ano" min="2018" max="3018" value="{{usuario.aluno.anoPFE}}" required>&nbsp;&nbsp;&nbsp;
+      <input type="number" id="ano" name="ano" min="2018" max="3018" value="{{usuario.aluno.anoPFE}}">&nbsp;&nbsp;&nbsp;
       <label for="semestre">Semestre PFE: </label> 
-      <input type="number" id="semestre" name="semestre" min="1" max="2" value="{{usuario.aluno.semestrePFE}}" required>
+      <input type="number" id="semestre" name="semestre" min="1" max="2" value="{{usuario.aluno.semestrePFE}}">
       
       <br>
       <label for="cr">cr: </label> <input type="number" style="width: 5em; text-align: right;" min="0" max="10" step="0.0001" id="cr" name="cr" value="{{usuario.aluno.cr|unlocalize}}">
@@ -99,8 +99,8 @@
     <div style="display: block; padding-left: 32px" class="row" data-type="professor">
 
       Dedicação: 
-      <input type="radio" name="dedicacao" id="ti" value="ti" {% if usuario.professor.dedicacao == "TI" %}checked{% endif %} required> <label for="ti"> TI</label>&nbsp;&nbsp;&nbsp;
-      <input type="radio" name="dedicacao" id="tp" value="tp" {% if usuario.professor.dedicacao == "TP" %}checked{% endif %} required> <label for="tp"> TP</label>
+      <input type="radio" name="dedicacao" id="ti" value="ti" {% if usuario.professor.dedicacao == "TI" %}checked{% endif %}> <label for="ti"> TI</label>&nbsp;&nbsp;&nbsp;
+      <input type="radio" name="dedicacao" id="tp" value="tp" {% if usuario.professor.dedicacao == "TP" %}checked{% endif %}> <label for="tp"> TP</label>
       <br>
 
       <label for="areas">Áreas de interesse: </label> <input type="text" size="75" maxlength="500" id="areas" name="areas"{% if usuario.professor.areas %} value="{{usuario.professor.areas}}" {% endif %} ><br>
@@ -114,7 +114,7 @@
     <div id="parceiro_div" style="display: block; padding-left: 32px" class="row" data-type="parceiro">
 
       <br><b><label for="organizacao">Organização</label></b>:
-      <select required name="organizacao" id="organizacao" class="selectpicker" title="Selecione organização" data-live-search="true" data-width="42%" data-size="10" >
+      <select name="organizacao" id="organizacao" class="selectpicker" title="Selecione organização" data-live-search="true" data-width="42%" data-size="10" >
           <option disabled value=""> -- selecione uma organização -- </option>
           {% for organizacao in organizacoes %}
             <option value="{{organizacao.id}}" {% if organizacao_selecionada.id == organizacao.id %}selected="selected"{% endif %} >
@@ -178,6 +178,38 @@
             $(el).show();
         }
       });
+
+      // Estudante
+      $("#computacao").prop('required',false);
+      $("#mecanica").prop('required',false);
+      $("#mecatronica").prop('required',false);
+      $("#ano").prop('required',false);
+      $("#semestre").prop('required',false);
+
+      // Professor
+      $("#ti").prop('required',false);
+      $("#tp").prop('required',false);
+      
+      // Parceiro
+      $("#organizacao").prop('required',false);
+
+      if(filterValue=="professor") {
+        $("#ti").prop('required',true);
+        $("#tp").prop('required',true);
+      }
+
+      if(filterValue=="parceiro") {
+        $("#organizacao").prop('required',true);
+      }
+
+      if(filterValue=="estudante") {
+        $("#computacao").prop('required',true);
+        $("#mecanica").prop('required',true);
+        $("#mecatronica").prop('required',true);
+        $("#ano").prop('required',true);
+        $("#semestre").prop('required',true);
+      }
+
 
       // Para não validar o que está escondido
       $("div:hidden").children('input').attr("disabled", true);
