--- a/estudantes/templates/mensagem_feedback_final.html
+++ b/estudantes/templates/mensagem_feedback_final.html
@@ -45,4 +45,4 @@ Carreiras <carreiras@insper.edu.br>
 
 %0D%0A%0D%0A
 {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20%20%20%20%20%20%20%20%20{% endif %}
-atenciosamente,%20Luciano%20Soares%20(coordenação%20PFE)
+atenciosamente,%20{{coordenacao.user.get_full_name}}%20(coordenação%20PFE)
