--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -12,6 +12,14 @@
     <a href="{% url 'relatos_quinzenais_todos' %}"><h5>Relatos Quinzenais</h5></a>
 
     <hr>
+    <h5>Informes</h5>
+    <small>Isso vai imediatamente emitir um e-mail para cada orientador do PFE no semestre</small>
+    <ul>
+        <li><a href="{% url 'informe_bancas' 1 %}">Bancas Intermediárias</a></li>
+        <li><a href="{% url 'informe_bancas' 0 %}">Bancas Finais</a></li>
+    </ul>
+
+    <hr>
     <h5>Listagem completa</h5>
     <ul>
         <li><a href="{% url 'estudantes_lista' %}">Estudantes</a></li>
