--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -56,13 +56,14 @@
   <span id="informacoes" style="border: 1px solid gray; border-radius: 2px; padding: 1px; margin-left: 20px;">
     <span id="informacoes_tag">&nbsp;Informações <i class="arrow right"></i>&nbsp;</span>
     <div id="toggle" style="display: none; height: 1em;">
-      <label><input onchange="($(this).prop('checked') ? $('.tit_ori').show() : $('.tit_ori').hide())" type="checkbox" checked />Título Original</label>&nbsp;&nbsp;&nbsp;
-      <label><input onchange="($(this).prop('checked') ? $('.curso').show() : $('.curso').hide())" type="checkbox" checked />Curso</label>&nbsp;&nbsp;&nbsp;
-      <label><input onchange="($(this).prop('checked') ? $('.coorientadores').show() : $('.coorientadores').hide())" type="checkbox" checked />Coorientadores</label>&nbsp;&nbsp;&nbsp;
-      <label><input onchange="($(this).prop('checked') ? $('.confidencial').show() : $('.confidencial').hide())" type="checkbox" checked />Confidenciais</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="tit_ori" onchange="($(this).prop('checked') ? $('.tit_ori').show() : $('.tit_ori').hide())" type="checkbox" checked /> Título Original</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="curso" onchange="($(this).prop('checked') ? $('.curso').show() : $('.curso').hide())" type="checkbox" checked /> Curso</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="coorientadores" onchange="($(this).prop('checked') ? $('.coorientadores').show() : $('.coorientadores').hide())" type="checkbox" checked /> Coorientadores</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="confidencial" onchange="($(this).prop('checked') ? $('.confidencial').show() : $('.confidencial').hide())" type="checkbox" checked /> Confidenciais</label>&nbsp;&nbsp;&nbsp;
     </div>
-  </span>
-  
+  </span>{% comment %} Mais elementos no carrega_pagina() {% endcomment %}
+
+
   <br><br>
   
   <div class="atualizar">
@@ -346,8 +347,22 @@
           //var table = $('#ProjetosTable').DataTable();
           //table.search("Bioengenharia").draw();
         {% endcomment %}
+        ($("#tit_ori").prop('checked') ? $('.tit_ori').show() : $('.tit_ori').hide());
+        ($("#curso").prop('checked') ? $('.curso').show() : $('.curso').hide());
+        ($("#coorientadores").prop('checked') ? $('.coorientadores').show() : $('.coorientadores').hide());
+        ($("#confidencial").prop('checked') ? $('.confidencial').show() : $('.confidencial').hide());
       };
-      window.onload = carrega_pagina
+      
+      function carrega_site() {
+        var filterEdicao = localStorage.getItem("filterEdicao");
+        if (filterEdicao !== null) {
+          $('#filterEdicao').val(filterEdicao).trigger('change');
+        }
+        carrega_pagina();
+      };
+
+      window.onload = carrega_site
+
     </script>
 
   </div>
