--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -58,15 +58,14 @@
   <span id="informacoes" style="border: 1px solid gray; border-radius: 2px; padding: 1px; margin-left: 20px;">
     <span id="informacoes_tag">&nbsp;Informações <i class="arrow right"></i>&nbsp;</span>
     <div id="toggle" style="display: none; height: 1em;">
-      <label><input onchange="($(this).prop('checked') ? $('.orientador').show() : $('.orientador').hide())" type="checkbox" checked /> orientador</label>&nbsp;&nbsp;&nbsp;
-      <label><input onchange="($(this).prop('checked') ? $('.local').show() : $('.local').hide())" type="checkbox" checked /> local</label>&nbsp;&nbsp;&nbsp;
-      <label><input onchange="($(this).prop('checked') ? $('.grupo').show() : $('.grupo').hide())" type="checkbox" checked /> grupo</label>&nbsp;&nbsp;&nbsp;
-      <label><input onchange="($(this).prop('checked') ? $('.curso').show() : $('.curso').hide())" type="checkbox" checked /> curso</label>&nbsp;&nbsp;&nbsp;
-      <label><input onchange="($(this).prop('checked') ? $('.facilitador').show() : $('.facilitador').hide())" type="checkbox" checked /> facilitador</label>&nbsp;&nbsp;&nbsp;
-      <label><input onchange="($(this).prop('checked') ? $('.sem_agendamento').show() : $('.sem_agendamento').hide())" type="checkbox" checked /> sem agendamento</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="orientador" onchange="($(this).prop('checked') ? $('.orientador').show() : $('.orientador').hide())" type="checkbox" checked /> orientador</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="local" onchange="($(this).prop('checked') ? $('.local').show() : $('.local').hide())" type="checkbox" checked /> local</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="grupo" onchange="($(this).prop('checked') ? $('.grupo').show() : $('.grupo').hide())" type="checkbox" checked /> grupo</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="curso" onchange="($(this).prop('checked') ? $('.curso').show() : $('.curso').hide())" type="checkbox" checked /> curso</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="facilitador" onchange="($(this).prop('checked') ? $('.facilitador').show() : $('.facilitador').hide())" type="checkbox" checked /> facilitador</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="sem_agendamento" onchange="($(this).prop('checked') ? $('.sem_agendamento').show() : $('.sem_agendamento').hide())" type="checkbox" checked /> sem agendamento</label>&nbsp;&nbsp;&nbsp;
     </div>
-  </span>
-
+  </span>{% comment %} Mais elementos no carrega_pagina() {% endcomment %}
 
   <div class="atualizar">
 
@@ -178,11 +177,26 @@
       {% endif %}
     </div>
 
-
     <script>
-      function carrega_pagina(){
+
+      function carrega_pagina() {
+        ($("#orientador").prop('checked') ? $('.orientador').show() : $('.orientador').hide());
+        ($("#local").prop('checked') ? $('.local').show() : $('.local').hide());
+        ($("#grupo").prop('checked') ? $('.grupo').show() : $('.grupo').hide());
+        ($("#curso").prop('checked') ? $('.curso').show() : $('.curso').hide());
+        ($("#facilitador").prop('checked') ? $('.facilitador').show() : $('.facilitador').hide());
+        ($("#sem_agendamento").prop('checked') ? $('.sem_agendamento').show() : $('.sem_agendamento').hide());
       };
-      window.onload = carrega_pagina
+
+      function carrega_site() {
+        var filterEdicao = localStorage.getItem("filterEdicao");
+        if (filterEdicao !== null) {
+          $('#filterEdicao').val(filterEdicao).trigger('change');
+        }
+        carrega_pagina();
+      };
+
+      window.onload = carrega_site
     </script>
 
   </div>
