--- a/templates/edicoes_ajax.html
+++ b/templates/edicoes_ajax.html
@@ -10,14 +10,20 @@
 {% if edicoes %}
   <script>
 
-     var request_ajax = null;
+    var request_ajax = null;
+     
+    var xhrCount = 0;  // Para contar as chamadas e usar somente a última
 
-     function recarregar_pagina() {
+    function recarregar_pagina() {
       
+      var seqNumber = ++xhrCount;
+
+      {% comment %}
       if (request_ajax != null){ 
           request_ajax.abort();
           request_ajax = null;
       }
+      {% endcomment %}
 
       $(".filter").attr('disabled', true);
       $("#spinner").css("visibility", "visible");
@@ -69,6 +75,8 @@
               'csrfmiddlewaretoken': '{{ csrf_token }}',
           },
           success: function(response){
+
+            if (seqNumber === xhrCount) { {% comment %} Processando resposta {% endcomment %}
               $(".atualizar").replaceWith($(".atualizar",response));
               {% include "tooltips.js" %}
               {% if tabela %}
@@ -80,6 +88,8 @@
               carrega_pagina();
               $("#spinner").css("visibility", "hidden");
               $(".filter").attr('disabled',false);
+            } // else {% comment %} Ignorando resposta {% endcomment %}
+ 
           },
           error: function (request, status, error) {
             {% if user.tipo_de_usuario == 4 %} 
