--- a/estudantes/templates/estudantes/relato_quinzenal.html
+++ b/estudantes/templates/estudantes/relato_quinzenal.html
@@ -35,7 +35,7 @@ textarea {
 
     <label for="relato">Informe seu relato quinzenal (máximo {{ max_length|add:"-100" }} caracteres).</label><br>
     <textarea id="relato" name="relato" rows="18" cols="160" maxlength="{{ max_length|add:"-10" }}" {% if not prazo %}disabled{% endif %} 
-              placeholder="Descreva brevemente as SUAS contribuições para o projeto, quais foram os SEUS aprendizados, quais competências VOCÊ desenvolveu nesse último período. Se quiser você também pode fazer um breve reflexão em como poderiam contribuir de forma mais eficiente para o projeto nas próximas semanas."
+              placeholder="Descreva brevemente as SUAS contribuições para o projeto, quais foram os SEUS aprendizados, quais competências VOCÊ desenvolveu nesse último período. Se quiser você também pode fazer um breve reflexão em como poderiam contribuir de forma mais eficiente para o projeto nas próximas semanas. Indique a quantidade de horas aproximada que você dedicou ao projeto desde o último relato quinzenal."
       >{% if relato %}{{relato}}{% endif %}</textarea>
     
     <br><br>
