cadastra e exibe documentos em inglês

--- a/organizacoes/templates/organizacoes/documento_view.html
+++ b/organizacoes/templates/organizacoes/documento_view.html
@@ -52,6 +52,13 @@
     </select>
 
     <br>
+    <label for="lingua_do_documento">Língua do documento:</label>
+    <select id="lingua_do_documento" name="lingua_do_documento" class="form-control" required="required" >
+      <option value="portugues" selected="selected">Português</option>
+      <option value="ingles">Inglês</option>
+    </select>
+
+    <br>
     <input type="checkbox" id="confidencial" name="confidencial" value="true" checked>
     <label for="confidencial"> Confidencial</label><br>
 
